--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "prisma:push": "cd src && prisma db push",
-    "prisma:studio": "cd src && prisma studio"
+    "prisma:studio": "cd src && prisma studio",
+    "prisma:seed": "cd src && prisma bd seed"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
@@ -29,6 +33,7 @@
     "react-use": "^17.5.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "vaul": "^1.0.0",
     "zustand": "^5.0.0-rc.2"
   },
